syntax = "proto3";
package protobuf.http;
message QuestionAnswerC{
	string hOpCode=1;
	repeated string questionList=2;
	repeated string questionOtherList=3;
	repeated string inputList=4;
	repeated string textAreaList=5;
	string questionId=6;
}
message QuestionAnswerS{
	string hOpCode=1;
}
message GetQuestionTypeC{
	string hOpCode=1;
}
message GetQuestionTypeS{
	string hOpCode=1;
	repeated string questionType=2;
}
message GetQuestionAnswerC{
	string hOpCode=1;
	string questionType=2;
	int32 questionNum=3;
}
message GetQuestionAnswerS{
	string hOpCode=1;
	string questionType=2;
	int32 questionNum=3;
	repeated string answer=4;
	repeated int32 answerNum=5;
	repeated string otherAnswer=6;
}
message GetQuestionTopAnswerC{
	string hOpCode=1;
	string questionType=2;//问题类型
	int32 num=3;//要多少个
}
message GetQuestionTopAnswerS{
	string hOpCode=1;
	string questionType=2;//问题类型
	repeated QuestionAnswerData questionList=3;//问题数据
}
message QuestionAnswerData{
	int32 questionNum=1;
	string answer=2;
	int32 answerNum=3;
	repeated QuestionInput inputList=4;
}
message QuestionInput{
	string input1=1;
	string input2=2;
}